# promptclimb

./: .gitignore  2026-04-08-yosef-promptclimber-m5.txt  NEXT_STEPS.md  README.md  RESEARCH_USECASE.md  SESSION_SUMMARY.md  SPEC_prompt_hill_climber.md  gold  prompt.md  prompt_sonnet_spidersan.md  pyproject.toml  research_prompt_mining.txt  samples  scorer_extraction.py  scorer_extraction.py.backup  scorer_spidersan.py
.spidersan/: registry.json
examples/classification/: prompt.txt  score.py
examples/classification/tests/: case_01.json  case_02.json
research_mining/gold/: section_1.json
research_mining/samples/: section_1.md
research_results/: prompt.initial.txt  results.tsv
research_results/spidersan_playbook/: research_log.md
results_devstral/: results.tsv
src/promptclimb/: __init__.py  cli.py  climber.py  proposer.py  results.py
src/promptclimb/backends/: __init__.py  anthropic.py  lmstudio.py  ollama.py  openai.py
src/promptclimb/scorers/: cosine.py
test_haiku/: prompt.initial.txt  results.tsv
tests/: test_backends.py  test_climber.py  test_proposer.py
