[project]
name = "promptclimb"
version = "0.1.0"
description = "Automatically improves LLM prompts through hill-climbing."
authors = [{ name = "Yosef", email = "yosef@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "openai",
    "python-dotenv",
    "numpy",
    "scikit-learn",
    "requests",
]

[project.optional-dependencies]
anthropic = ["anthropic"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/treebird7/promptclimb"
"Bug Tracker" = "https://github.com/treebird7/promptclimb/issues"

[project.scripts]
phc = "promptclimb.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
